# meteostat_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  justfile
.github/workflows/: ci.yml  publish.yml
benches/: meteostat.rs
checks/: all.ps1  lint.ps1
examples/: basic_use.rs  collect_to_struct.rs  fetch_london.rs  filtering.rs  find_stations.rs  get_hourly.rs  get_stations.rs  get_weather.rs  get_weather_at_date.rs  graph_data.rs  stations3.rs  test2.rs  weather_by_station_id.rs
src/: error.rs  filtering.rs  get_hourly.rs  get_hourly_lazy.rs  get_stations.rs  lib.rs  meteostat.rs  utils.rs
src/clients/: climate_client.rs  daily_client.rs  hourly_client.rs  mod.rs  monthly_client.rs
src/stations/: error.rs  locate_station.rs  mod.rs  station_error.rs
src/types/: data_source.rs  frequency.rs  into_utc_trait.rs  mod.rs  rkyv_datetime.rs  station.rs  weather_condition.rs
src/types/bitflags/: climate.rs  daily.rs  hourly.rs  mod.rs  monthly.rs
src/types/frequencies/: climate_frame.rs  daily_frame.rs  hourly_frame.rs  monthly_frame.rs
src/types/frequency_frames/: climate_frame.rs  daily_frame.rs  hourly_frame.rs  mod.rs  monthly_frame.rs
src/types/traits/: mod.rs  types.rs  utils.rs
src/types/traits/any/: any_date.rs  any_datetime.rs  any_month.rs  mod.rs
src/types/traits/period/: date_period.rs  datetime_period.rs  mod.rs  month_period.rs
src/types/weather_data/: climate.rs  daily.rs  hourly.rs  monthly.rs
src/weather_data/: data_extractor.rs  data_loader.rs  error.rs  extractor.rs  fetch.rs  fetcher.rs  frame_fetcher.rs  mod.rs  weather_data_error.rs
