[package]
name = "meteostat"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
description = "Get historic weather data from thousands of weather stations around the world."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/meteostat_rs"
repository = "https://github.com/ruurdbijlsma/meteostat_rs"
readme = "README.md"
keywords = ["meteostat", "weather", "historic", "temperature", "climate"]
documentation = "https://docs.rs/meteostat/latest/meteostat/index.html"
exclude = [
    "data",
    ".github",
    "checks",
    ".idea",
]
categories = ["science::geo"]

[[bench]]
name = "meteostat"
harness = false

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json", "gzip", "stream"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
polars = { version = "0.46.0", features = ["lazy", "strings", "parquet"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.14", features = ["io", "io-util"] }
haversine = "0.2.1"
bincode = { version = "2.0.1", features = ["serde"] }
rstar = "0.12.2"
dirs = "6.0.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
bon = "3.6.3"
ordered-float = "5.0.0"
# Only for one of the examples:
plotlars = { version = "0.9.2", optional = true }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[features]
default = []
examples = ["dep:plotlars"]

[[example]]
name = "graph_data"
path = "examples/graph_data.rs"
required-features = ["examples"]
