[package]
name = "meteostat"
version = "0.4.6"
edition = "2021"
license = "Apache-2.0"
description = "Get historic weather data from thousands of weather stations around the world."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/meteostat_rs"
repository = "https://github.com/ruurdbijlsma/meteostat_rs"
readme = "README.md"
keywords = ["meteostat", "weather", "historic", "temperature", "climate"]
documentation = "https://docs.rs/meteostat/latest/meteostat/index.html"
exclude = [
    "data",
    ".github",
    "checks",
    ".idea",
]
categories = ["science::geo"]

[[bench]]
name = "meteostat"
harness = false

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "gzip", "json", "stream"] }
async-compression = "0.4.32"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
polars = { version = "0.46.0", features = ["csv", "docs", "dtype-date", "dtype-datetime", "dtype-duration", "fmt", "lazy", "parquet", "strings", "temporal"], default-features = false }
chrono = { version = "0.4.42", features = ["serde", "wasm-bindgen"], default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false }
tokio-util = { version = "0.7.16", features = ["io-util"] }
haversine = "0.2.1"
bincode = { version = "2.0.1", features = ["alloc", "serde"], default-features = false }
rstar = "0.12.2"
dirs = "6.0.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
bon = { version = "3.8.1", default-features = false }
ordered-float = { version = "5.1.0", default-features = false }
# Only for one of the examples:
plotlars = { version = "0.10.4", optional = true }


[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }

[features]
default = []
examples = ["dep:plotlars"]

[[example]]
name = "graph_data"
path = "examples/graph_data.rs"
required-features = ["examples"]
