[package]
name = "meteostat"
version = "0.4.7"
edition = "2021"
license = "Apache-2.0"
description = "Get historic weather data from thousands of weather stations around the world."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/meteostat_rs"
repository = "https://github.com/ruurdbijlsma/meteostat_rs"
readme = "README.md"
keywords = ["meteostat", "weather", "historic", "temperature", "climate"]
documentation = "https://docs.rs/meteostat/latest/meteostat/index.html"
exclude = [
    "data",
    ".github",
    "checks",
    ".idea",
]
categories = ["science::geo"]

[[bench]]
name = "meteostat"
harness = false

[dependencies]
reqwest = { version = "0.13.4", features = ["blocking", "json", "gzip", "stream"] }
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["unbounded_depth"] }
polars = { version = "0.54.4", features = ["lazy", "strings", "parquet"] }
chrono = { version = "0.4.45", features = ["serde"] }
tokio = { version = "1.53.0", features = ["full"] }
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
haversine = "0.2.1"
rstar = "0.13.0"
dirs = "6.0.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
bon = "3.9.3"
ordered-float = "5.3.0"
rkyv = { version = "0.8.17", features = ["std", "alloc", "bytecheck"] }
# Only for one of the examples:
plotlars = { version = "0.12.6", optional = true, features = ["plotters"] }


[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

[features]
default = []
examples = ["dep:plotlars"]

[[example]]
name = "graph_data"
path = "examples/graph_data.rs"
required-features = ["examples"]